--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
         <h2>About Two Time Gooning Simulator</h2>
         <p>Two time gooning simulator is one off our zestiest games yet. However, we ensure that we keep anyone underage safe, so we have 5 different versions, each only downloadable with a code. Here you can also see some blurred screenshots of the gooning simulator, but don't worry, the higher your age, the less you will have unblurred in the real game!</p>
         <div class="gallery-images">
-            <img src="images/image.jpg" alt="Screenshot 1">
-            <img src="images/image (1).jpg" alt="Screenshot 2">
-            <img src="images/image (2).jpg" alt="Screenshot 3">
-            <img src="images/image (3).jpg" alt="Screenshot 4">
-            <img src="images/image (4).jpg" alt="Screenshot 5" >
+            <img src="images/examples/image.jpg" alt="Screenshot 1">
+            <img src="images/examples/image (1).jpg" alt="Screenshot 2">
+            <img src="images/examples/image (2).jpg" alt="Screenshot 3">
+            <img src="images/examples/image (3).jpg" alt="Screenshot 4">
+            <img src="images/examples/image (4).jpg" alt="Screenshot 5" >
         </div>
     </section>
 
